fix(role): update codebase to use the new role model

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -181,6 +181,7 @@
     <script src="{{ url_for('static', filename='vendor/js/Sortable.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     <script src="{{ url_for('static', filename='js/search.js') }}"></script>
+    {% block scripts %}{% endblock %}
 
     <script>
       // --- Navigation and Profile Menu Logic ---
