--- a/app/templates/_session_modal.html
+++ b/app/templates/_session_modal.html
@@ -13,18 +13,13 @@
           <td><input type="text" id="default_owner" name="default_owner" /></td>
         </tr>
         <tr>
-          <td><label for="role">Role:</label></td>
-          <td><input type="text" id="role" name="role" /></td>
-        </tr>
-        <tr>
-          <td><label for="role_group">Role Group:</label></td>
+          <td><label for="role_id">Role:</label></td>
           <td>
-            <select id="role_group" name="role_group">
+            <select id="role_id" name="role_id">
               <option value="">None</option>
-              <option value="Guest">Guest</option>
-              <option value="Member">Member</option>
-              <option value="Officer">Officer</option>
-              <option value="VPE">VPE</option>
+              {% for role in roles %}
+              <option value="{{ role.id }}">{{ role.name }}</option>
+              {% endfor %}
             </select>
           </td>
         </tr>
