add a meeting status button (without action) to the agenda page

--- a/app/static/css/agenda.css
+++ b/app/static/css/agenda.css
@@ -283,6 +283,11 @@
     margin: 0;
 }
 
+.action-bar-right {
+    justify-content: flex-end;
+    flex-grow: 1;
+}
+
 #edit-mode-buttons {
     position: fixed;
     top: 75px; 
